--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,16 @@
-<div>
-  <mat-toolbar class="header">StonegateChurch Self Assessment</mat-toolbar>
-  <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav opened mode="side">
-      <mat-card class="example-card">
-        Home
-      </mat-card>
-    </mat-sidenav>
-    <!-- <mat-sidenav opened mode="side" position="end">
-      <mat-card class="example-card">
-        <plant-reminder></plant-reminder>
-      </mat-card>
-    </mat-sidenav> -->
-    <section>
-      <div class="container">
-        <div *ngIf="user; else showLogin">
-          <assessment-home></assessment-home>
-        </div>
-        <ng-template #showLogin>
-          <assessment-login></assessment-login>
-        </ng-template>
-      </div>
-    </section>
-  </mat-sidenav-container>
+<div class="container">
+  <mat-toolbar class="header">StonegateChurch Self Assessment 
+    <span class="spacer"></span>
+    <button mat-raised-button *ngIf="user" (click)="logout()">Logout</button>
+  </mat-toolbar>
+  <div class="sidenav-container">
+    <div *ngIf="user; else showLogin">
+      <assessment-home></assessment-home>
+    </div>
+    <ng-template #showLogin>
+      <assessment-login></assessment-login>
+    </ng-template>
+  </div>
+
   <mat-toolbar class="footer">Powered by anthonycunningham.io</mat-toolbar>
 </div>
