--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -1,6 +1,31 @@
-<p>login works!</p>
-<p>If this is your first time logging in, please click Email and sign in with your email. You will be asked to
-    provide your full name and email address.
-</p>
-<firebase-ui (signInSuccessWithAuthResult)="successCallback($event)" (signInFailure)="errorCallback($event)">
-</firebase-ui>
+<div class="row h-100">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+        <div class="h-100">
+            <div class="h-25"></div>
+            <div class="h-50">
+                <mat-card>
+                    <mat-card-header>
+                        <p class="mat-subheading-2"><img src="../../assets/stonegate_logo_png.PNG">
+                        &nbsp;&nbsp;&nbsp;&nbsp;Self Awareness Assessment</p>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <br /><br /><br />
+                        <firebase-ui (signInSuccessWithAuthResult)="successCallback($event)"
+                            (signInFailure)="errorCallback($event)">
+                        </firebase-ui>
+                        <p class="mat-small"><br /><br /><br />
+                            If this is your first time logging in and you wish to use a non-Google email address, 
+                            you can register by clicking <b>Sign in with email</b>.
+                            You will be asked to provide your full name and email address.
+
+                            <br /><br /><br />Visit our Privacy Policy and Terms of Service <a href='/'>here</a>.
+                        </p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <div class="h-25"></div>
+        </div>
+    </div>
+    <div class="col-sm-3"></div>
+</div>
