--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~firebaseui/dist/firebaseui.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; height: 100%; }
+html, body { 
+    height: 100%; 
+}
+
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    height: 100%;
+    background-image: url("./assets/subtle-web-background-9.jpg");
+}
 
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '@angular/material/prebuilt-themes/purple-green.css';
