--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container h-100">
   <div *ngIf="user; else showLogin">
-    <assessment-home></assessment-home>
+    <assessment-landing></assessment-landing>
   </div>
   <div>
     <ng-template #showLogin>
