--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div class="container h-100">
+<div *ngIf="showLoader" class="vh-100">
+  <mat-spinner></mat-spinner>
+</div>
+<div *ngIf="!showLoader" class="container h-100">
   <div *ngIf="user; else showLogin">
     <assessment-landing></assessment-landing>
   </div>
