--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -1,20 +1,21 @@
 <div class="row h-100">
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
-        <div class="h-100">
+        <div class="h-50">
             <div class="h-25"></div>
-            <div class="h-50">
+            <div class="h-25">
                 <mat-card>
                     <mat-card-header>
                         <p class="mat-subheading-2"><img src="../../assets/stonegate_logo_png.PNG">
                         &nbsp;&nbsp;&nbsp;&nbsp;Self Awareness Assessment</p>
                     </mat-card-header>
                     <mat-card-content>
+                        <mat-divider></mat-divider>
                         <br /><br /><br />
                         <firebase-ui (signInSuccessWithAuthResult)="successCallback($event)"
                             (signInFailure)="errorCallback($event)">
                         </firebase-ui>
-                        <p class="mat-small"><br /><br /><br />
+                        <p class="mat-small"><br /><br /><mat-divider></mat-divider><br />
                             If this is your first time logging in and you wish to use a non-Google email address, 
                             you can register by clicking <b>Sign in with email</b>.
                             You will be asked to provide your full name and email address.
