--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="container h-75" style="padding-top:15px;">
+<section class="h-75" style="padding-top:15px;">
     <h1 *ngIf="user" class="mat-display-1">Welcome, {{user.fullName}}!</h1>
     <div class="row">
         <div class="col-sm-3"></div>
