--- a/src/components/landing/landing.component.html
+++ b/src/components/landing/landing.component.html
@@ -10,8 +10,10 @@
             <assessment-nav></assessment-nav>
         </mat-card>
     </mat-sidenav>
-    <router-outlet></router-outlet>
-    
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+     
 </mat-sidenav-container>
 
 <mat-toolbar class="footer">© www.stonegate.selfassessment, all rights reserved.</mat-toolbar>
