--- a/src/components/self-assessment/self-assessment.component.html
+++ b/src/components/self-assessment/self-assessment.component.html
@@ -1,3 +1,19 @@
-<div class="d-flex justify-content-center" style="padding-top:15px;">
-    <p>self-assessment works!</p>
-</div>
+
+<div style="padding-top:15px;">
+    <form (ngSubmit)="onSubmit()" [formGroup]="form">
+  
+      <div *ngFor="let question of questions" class="form-row">
+        <assessment-question [question]="question" [form]="form">
+
+        </assessment-question>
+      </div>
+  
+      <div class="form-row">
+        <button type="submit" [disabled]="!form.valid">Save</button>
+      </div>
+    </form>
+   
+    <div *ngIf="payLoad" class="form-row">
+      <strong>Saved the following values</strong><br>{{payLoad}}
+    </div>
+  </div>
