--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,18 @@
-<div *ngIf="showLoader" class="vh-100">
-  <mat-spinner></mat-spinner>
+
+<div *ngIf="showLoader" class="row justify-content-center h-100">
+  <div class="h-75">
+    <mat-spinner></mat-spinner>
+  </div>
 </div>
-<div *ngIf="!showLoader" class="container h-100">
+<div *ngIf="!showLoader" class="h-100">
   <div *ngIf="user; else showLogin">
     <assessment-landing></assessment-landing>
   </div>
   <div>
     <ng-template #showLogin>
-      <assessment-login></assessment-login>
+      <div class="container">
+        <assessment-login></assessment-login>
+      </div>
     </ng-template>
   </div>
 </div>
