--- a/src/components/self-assessment/self-assessment.component.html
+++ b/src/components/self-assessment/self-assessment.component.html
@@ -1,19 +1,16 @@
-
 <div style="padding-top:15px;">
     <form (ngSubmit)="onSubmit()" [formGroup]="form">
-  
-      <div *ngFor="let question of questions" class="form-row">
-        <assessment-question [question]="question" [form]="form">
-
-        </assessment-question>
-      </div>
-  
-      <div class="form-row">
-        <button type="submit" [disabled]="!form.valid">Save</button>
-      </div>
+        <div *ngFor="let question of questions" class="form-row">
+            <div class="col-7">
+                <assessment-question [question]="question" [form]="form">
+                </assessment-question>
+            </div>
+        </div>
+        <div class="form-row">
+            <button type="submit" [disabled]="!form.valid">Save</button>
+        </div>
     </form>
-   
     <div *ngIf="payLoad" class="form-row">
-      <strong>Saved the following values</strong><br>{{payLoad}}
+        <strong>Saved the following values</strong><br>{{payLoad}}
     </div>
-  </div>
+</div>
