--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 
-<div *ngIf="showLoader" class="row justify-content-center h-100">
+<div *ngIf="showLoader" class="row justify-content-center">
   <div class="h-75">
     <mat-spinner></mat-spinner>
   </div>
 </div>
-<div *ngIf="!showLoader" class="h-100">
+<div *ngIf="!showLoader">
   <div *ngIf="user; else showLogin">
     <assessment-landing></assessment-landing>
   </div>
