--- a/src/components/section/section.component.scss
+++ b/src/components/section/section.component.scss
@@ -1,3 +1,9 @@
-.header {
+.section-card {
     background: #33a69b;
+    color: white;
+  }
+
+  .section-card-subtitle {
+    background: #33a69b;
+    color: white;
   }
