--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </div>
   <div>
     <ng-template #showLogin>
-      <div class="container">
+      <div>
         <assessment-login></assessment-login>
       </div>
     </ng-template>
