--- a/src/components/home/home.component.scss
+++ b/src/components/home/home.component.scss
@@ -36,4 +36,17 @@
   .spacer {
     flex: 1 1 auto;
   }
+
+  .div-home-message {
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: seashell;
+    height: 350px;
+  }
+
+  .div-home-message-p {
+    padding: 15px;
+  }
   
