--- a/src/components/landing/landing.component.html
+++ b/src/components/landing/landing.component.html
@@ -10,7 +10,7 @@
             <assessment-nav></assessment-nav>
         </mat-card>
     </mat-sidenav>
-    <div class="container">
+    <div>
         <router-outlet></router-outlet>
     </div>
      
