--- a/src/components/self-assessment/self-assessment.component.html
+++ b/src/components/self-assessment/self-assessment.component.html
@@ -1,5 +1,5 @@
-<div style="padding-top:15px;">
-  <h1 class="mat-display-1">Stonegate Self-Awareness Assessment</h1>
+<div class="container" style="padding-top:15px;">
+  <h1 class="mat-display-3">Stonegate Self-Awareness Assessment</h1>
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
     <div *ngIf="sections">
       <div *ngFor="let section of sections" class="form-row">
