--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,32 +1,49 @@
-<section style="padding-top:15px;">
-    <h1 *ngIf="user" class="mat-display-1">Welcome, {{user.fullName}}!</h1>
-    <div class="row">
-        <div class="col-sm-9">
-            <mat-card>
-            <h2>The Goal of This Exercise</h2>
-            <p>Paul Tripp summarizes the universal human problem by saying, “Our self-perception is as
-                accurate as a carnival mirror.” It is so easy to think one thing about ourself, while the opposite is
-                actually true. Simply put, all of us have a need to grow in self-awareness. To state it even more
-                strongly,
-                there are few things as important as adequate self-awareness in a person’s life, especially if you are a
-                leader of people.
-            </p>
-            <p>We want to serve you by urging you to consider the questions in the following
-                exercise.
-                The goal of this exercise is simple, we want this leader to see (with more accuracy) who they are and
-                who
-                they are not, and then (by the grace of God) be content with who it is that God has made them to be.
-                With
-                your help, this person can gain more insight into who they are through someone other than themselves. We
-                consider this a mercy from God and a beautiful picture of what it means to be known. </p>
-            </mat-card>
-            <br /><br />
-            <div class="row justify-content-center">
-                <button mat-raised-button *ngIf="user" (click)="toAssessment()">Start my Self Assessment</button>
+<div class="container-fluid" style="padding: 0;">
+    <section>
+        <div class="div-home-message">
+            <h1 *ngIf="user" class="mat-display-3 div-home-message-p" style="margin: 0px;">Welcome, {{user.fullName}}!</h1>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="row">
+                        <div class="col-md-12 div-home-message-p">
+                            <h2 class="div-home-message-p" style="margin: 0px;">The Goal of This Exercise</h2>
+                            <p class="div-home-message-p">Paul Tripp summarizes the universal human problem by saying, “Our self-perception is as
+                                accurate as a carnival mirror.” It is so easy to think one thing about ourself, while
+                                the
+                                opposite is
+                                actually true. Simply put, all of us have a need to grow in self-awareness. To state it
+                                even
+                                more
+                                strongly,
+                                there are few things as important as adequate self-awareness in a person’s life,
+                                especially
+                                if you are a
+                                leader of people. 
+                                We want to serve you by urging you to consider the questions in the following
+                                exercise.
+                            </p>
+                            <p class="div-home-message-p">
+                                The goal of this exercise is simple, we want this leader to see (with more accuracy) who
+                                they are and
+                                who
+                                they are not, and then (by the grace of God) be content with who it is that God has made
+                                them to be.
+                                With
+                                your help, this person can gain more insight into who they are through someone other
+                                than
+                                themselves. We
+                                consider this a mercy from God and a beautiful picture of what it means to be known.
+                            </p>
+                        </div>
+                        <div class="col-md-12 div-home-message-p">
+                            <div class="row justify-content-center">
+                                <button mat-raised-button *ngIf="user" (click)="toAssessment()">Start my Self
+                                    Assessment</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-3"></div>
-    </div>
-
-
-</section>
+    </section>
+</div>
