--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -20,7 +20,7 @@
                             you can register by clicking <b>Sign in with email</b>.
                             You will be asked to provide your full name and email address.
 
-                            <br /><br /><br />Visit our Privacy Policy and Terms of Service <a href='/'>here</a>.
+                            <br /><br /><br />Visit our Privacy Policy <a href="https://www.privacypolicies.com/live/29eac93e-516e-40d1-a0e3-15514dd44810">Here.</a>
                         </p>
                     </mat-card-content>
                 </mat-card>
