--- a/src/components/assessment-contacts/assessment-contacts.component.html
+++ b/src/components/assessment-contacts/assessment-contacts.component.html
@@ -52,52 +52,51 @@
             </mat-form-field>
         </div>
         <div class="col-md-4"></div>
-        <div class="col-md-12" *ngIf=showAdditionalContacts>
+        <div class="col-md-12">
             <br />
         </div>
         
-
-        <div *ngIf="showAdditionalContacts" class="col-md-4">
+        <div class="col-md-4">
             <mat-form-field class="full-width-field">
                 <mat-label>Family Member #2 Name</mat-label>
-                <input type="text" matInput formControlName="familyTwoName">
+                <input type="text" matInput formControlName="familyTwoName" required>
             </mat-form-field>
         </div>
-        <div *ngIf="showAdditionalContacts" class="col-md-4">
+        <div class="col-md-4">
             <mat-form-field class="full-width-field">
                 <mat-label>Family Member #2 Email</mat-label>
-                <input type="email" matInput formControlName="familyTwoEmail">
+                <input type="email" matInput formControlName="familyTwoEmail" required>
             </mat-form-field>
         </div>
-        <div *ngIf="showAdditionalContacts" class="col-md-4"></div>
-        <div *ngIf="showAdditionalContacts" class="col-md-4">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
             <mat-form-field class="full-width-field">
                 <mat-label>Spiritual Leader #2 Name</mat-label>
-                <input type="text" matInput formControlName="spiritualTwoName">
+                <input type="text" matInput formControlName="spiritualTwoName" required>
             </mat-form-field>
         </div>
-        <div *ngIf="showAdditionalContacts" class="col-md-4">
+        <div class="col-md-4">
             <mat-form-field class="full-width-field">
                 <mat-label>Spiritual Leader #2 Email</mat-label>
-                <input type="email" matInput formControlName="spiritualTwoEmail">
+                <input type="email" matInput formControlName="spiritualTwoEmail" required>
             </mat-form-field>
         </div>
-        <div *ngIf="showAdditionalContacts" class="col-md-4"></div>
-        <div *ngIf="showAdditionalContacts" class="col-md-4">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
             <mat-form-field class="full-width-field">
                 <mat-label>Peer or Friend #2 Name</mat-label>
-                <input type="text" matInput formControlName="friendTwoName">
+                <input type="text" matInput formControlName="friendTwoName" required>
             </mat-form-field>
         </div>
-        <div *ngIf="showAdditionalContacts" class="col-md-4">
+        <div class="col-md-4">
             <mat-form-field class="full-width-field">
                 <mat-label>Peer or Friend #2 Email</mat-label>
-                <input type="email" matInput formControlName="friendTwoEmail">
+                <input type="email" matInput formControlName="friendTwoEmail" required>
             </mat-form-field>
         </div>
         <div *ngIf="showAdditionalContacts" class="col-md-4"></div>
 
-        <div class="col-md-12" *ngIf=showAdditionalContacts>
+        <div class="col-md-12">
             <br />
         </div>
         
