--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -6,8 +6,8 @@
                 <div class="col-sm-12">
                     <div class="row">
                         <div class="col-md-12 div-home-message-p">
-                            <h2 class="div-home-message-p" style="margin: 0px;">The Goal of This Exercise</h2>
-                            <p class="div-home-message-p">Paul Tripp summarizes the universal human problem by saying, “Our self-perception is as
+                            <div class="mat-headline div-home-message-p" style="margin: 0px;">The Goal of This Exercise</div>
+                            <p class="mat-subheading-1 div-home-message-p">Paul Tripp summarizes the universal human problem by saying, “Our self-perception is as
                                 accurate as a carnival mirror.” It is so easy to think one thing about ourself, while
                                 the
                                 opposite is
@@ -20,10 +20,7 @@
                                 if you are a
                                 leader of people. 
                                 We want to serve you by urging you to consider the questions in the following
-                                exercise.
-                            </p>
-                            <p class="div-home-message-p">
-                                The goal of this exercise is simple, we want this leader to see (with more accuracy) who
+                                exercise. <br> The goal of this exercise is simple, we want this leader to see (with more accuracy) who
                                 they are and
                                 who
                                 they are not, and then (by the grace of God) be content with who it is that God has made
